Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-72372

Button outside dialog if there is only one standardButton defined

XMLWordPrintable

    • Linux/X11, macOS
    • 6476de0b669162cf08c11f5c8d5ad0b42419f365 (qt/qtquickcontrols2/5.12)

      If one opens a Dialog and uses just standardButtons: Dialog.Close the button is rendered outside of the dialog. If there are two or more standard buttons defined, the buttons are rendered correctly.

       

      Minimal example to reproduce the issue: standardbuttonsbug.qml

      Screenshot of this example run in qmlscene:

        1. dialog-button-bug.png
          5 kB
          Martin Gräßlin
        2. image-2020-01-24-18-13-07-694.png
          20 kB
          Michael Kostukov
        3. image-2020-01-24-18-14-21-496.png
          30 kB
          Michael Kostukov
        4. standardbuttonsbug.qml
          0.3 kB
          Martin Gräßlin
        For Gerrit Dashboard: QTBUG-72372
        # Subject Branch Project Status CR V

            mitch_curtis Mitch Curtis
            mgraesslin Martin Gräßlin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes